--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,7 +228,7 @@ import Layout from '../layouts/Layout.astro'
         <input
           type="hidden"
           name="access_key"
-          value="YOUR_ACCESS_KEY_HERE"
+          value="11e26c32-e78c-43f8-8ea2-0e500c47926b"
         />
 
         <fieldset>
