--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -343,7 +343,7 @@ import Layout from '../layouts/Layout.astro'
   }
   .content {
     padding-bottom: 3rem;
-    max-width: 80ch;
+    width: 80ch;
   }
   .content h2 {
     color: var(--startCol);
