--- a/src/components/MainNav.astro
+++ b/src/components/MainNav.astro
@@ -8,8 +8,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
             viewBox="0 0 20 20"
             ><path
               fill="currentColor"
@@ -24,8 +22,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
             viewBox="0 0 20 20"
             ><path
               fill="currentColor"
@@ -40,8 +36,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
             viewBox="0 0 20 20"
             ><path
               fill="currentColor"
@@ -56,8 +50,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
             viewBox="0 0 20 20"
             ><path
               fill="currentColor"
@@ -72,8 +64,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
             viewBox="0 0 16 16"
             ><path
               fill="currentColor"
@@ -88,8 +78,6 @@
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
             viewBox="0 0 20 20"
             ><path
               fill="currentColor"
@@ -126,6 +114,7 @@
     background: black;
     cursor: pointer;
     z-index: 10;
+    box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.8);
   }
   a {
     display: flex;
@@ -136,20 +125,13 @@
   }
   li {
     position: relative;
+    transition: color 200ms ease-in;
   }
-  li::after {
-    content: '';
-    background: radial-gradient(rgba(199, 56, 199, 0.4), transparent);
-    position: absolute;
-    inset: 0;
-    opacity: 0;
-    transition: opacity 200ms ease-in;
-  }
-  li:hover::after {
-    opacity: 1;
+  li:hover {
+    color: #eb3a02;
   }
 
-  .icon {
+  .icon svg {
     width: 2rem;
   }
 
@@ -159,6 +141,12 @@
     }
     .text {
       display: none;
+    }
+    a {
+      display: block;
+    }
+    .icon {
+      width: 4rem;
     }
   }
 </style>
