--- a/src/components/home/Project.astro
+++ b/src/components/home/Project.astro
@@ -4,30 +4,41 @@ import { Icon } from "astro-icon"
 import techIcons from "../../lib/techIcons"
 
 const { project } = Astro.props
-const uid = project.uid
 const title = project.data.name[0].text
 const url = project.data.website_link.url
 const short_description = project.data.short_description
-const main_content = project.data.main_content
 const creation_date = prismic
   .asDate(project.data.creation_date)
   ?.toLocaleDateString()
 const tech_stack = project.data.technologies
 const project_type = project.data.type
+const wip = project.data.wip
 ---
 
-<div class="project flow">
-  <h3>
-    <a href={url}>
-      {title}
-      <Icon name="fluent:open-20-regular" />
-    </a>
-  </h3>
-  <div class="labels">
-    <p><span>Project Type:</span> {project_type}</p>
-    <p><span>Built:</span> {creation_date}</p>
+<div class="project">
+  <div class="content flow">
+    <h3>
+      <a href={url}>
+        {title}
+        <Icon name="fluent:open-20-regular" />
+        {
+          wip && (
+            <img
+              src="https://camo.githubusercontent.com/7f8dab7b0d83bc7e34106e4446800ec6a4bf0413d37170648f5535283ca460dc/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f5374617475732d576f726b253230696e25323050726f67726573732d79656c6c6f77"
+              alt="Work In Progress"
+              data-canonical-src="https://img.shields.io/badge/Status-Work%20in%20Progress-yellow"
+              style="max-width: 100%;"
+            />
+          )
+        }
+      </a>
+    </h3>
+    <div class="labels">
+      <p><span>Project Type:</span> {project_type}</p>
+      <p><span>Built:</span> {creation_date}</p>
+    </div>
+    <p>{short_description}</p>
   </div>
-  <p>{short_description}</p>
   <div class="tech">
     <h4>Built With:</h4>
     <div class="stack">
@@ -35,7 +46,12 @@ const project_type = project.data.type
         tech_stack.map((tech: { technology: string }) => {
           const tech_name = tech.technology
           const icon_string = techIcons[tech_name]
-          return <Icon name={icon_string} />
+          return (
+            <div class="tooltip">
+              <span class="tooltiptext">{tech_name}</span>
+              <Icon name={icon_string} />
+            </div>
+          )
         })
       }
     </div>
@@ -45,11 +61,10 @@ const project_type = project.data.type
 <style>
   .project {
     position: relative;
-    width: 100%;
     background: linear-gradient(135deg, var(--startCol), var(--endCol));
     border-radius: 10px;
-    padding: 1rem;
     isolation: isolate;
+    overflow: hidden;
   }
   .project::before {
     content: "";
@@ -59,8 +74,15 @@ const project_type = project.data.type
     background: black;
     z-index: -1;
   }
+  .content {
+    padding: 1rem;
+  }
+
   h3 {
     font-size: 1.6rem;
+  }
+  h4 {
+    color: var(--startCol);
   }
   a {
     display: flex;
@@ -88,17 +110,15 @@ const project_type = project.data.type
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    color: black;
     padding: 1rem;
-    padding-top: 0.5rem;
-    width: fit-content;
-    border-radius: 10px;
   }
   .stack {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    justify-content: center;
     align-items: center;
   }
   .tech [astro-icon] {
@@ -112,5 +132,42 @@ const project_type = project.data.type
     width: fit-content;
     padding: 0.5rem;
     text-decoration: none;
+  }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
   }
 </style>
